Додали розмiтку , cтилi до тексту

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Ubuntu:wght@300&display=swap" 
     rel="stylesheet"/>
-<link rel="style.css" href="style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--обмежувальний контейнер-->
@@ -33,7 +33,7 @@
                 <span class="card-categori">
                     LIFESTYLE
                 </span>
-                <h2 class="card-titel">More than just a music festival </h2>
+                <h2 class="card-title">More than just a music festival </h2>
 
                 <p  class="card-text">Lorem ipsum dolor sit, amet consectetur 
                     adipisicing elit. Fuga maiores architecto, cum quidem error
@@ -47,7 +47,7 @@
                 <span class="card-categori">
                     PHOTODIARY
                 </span>
-                <h2 class="card-titel"> Life tastes better with coffee</h2>
+                <h2 class="card-title"> Life tastes better with coffee</h2>
 
                 <p  class="card-text">Lorem ipsum dolor sit, amet consectetur 
                     adipisicing elit. Fuga maiores architecto, cum quidem error
@@ -61,7 +61,7 @@
             <span class="card-categori">
                 MUSIC
             </span>
-            <h2 class="card-titel"> American dream</h2>
+            <h2 class="card-title"> American dream</h2>
 
             <p  class="card-text">Lorem ipsum dolor sit, amet consectetur 
                 adipisicing elit. Fuga maiores architecto, cum quidem error
@@ -76,7 +76,7 @@
         <span class="card-categori">
             LIFESTYLE
         </span>
-        <h2 class="card-titel"> A day exploring the Alps</h2>
+        <h2 class="card-title"> A day exploring the Alps</h2>
 
         <p  class="card-text">Lorem ipsum dolor sit, amet consectetur 
             adipisicing elit. Fuga maiores architecto, cum quidem error
@@ -90,7 +90,7 @@
     <span class="card-categori">
         TRAVEL
     </span>
-    <h2 class="card-titel">Top 10 song for running</h2>
+    <h2 class="card-title">Top 10 song for running</h2>
 
     <p  class="card-text">Lorem ipsum dolor sit, amet consectetur 
         adipisicing elit. Fuga maiores architecto, cum quidem error
@@ -104,7 +104,7 @@
     <span class="card-categori">
         LIFESTYLE
     </span>
-    <h2 class="card-titel"> Cold winter days</h2>
+    <h2 class="card-title"> Cold winter days</h2>
 
     <p  class="card-text">Lorem ipsum dolor sit, amet consectetur 
         adipisicing elit. Fuga maiores architecto, cum quidem error
