--- a/index.html
+++ b/index.html
@@ -113,6 +113,20 @@
 
 </section>
 </div>
+<section class="card">
+    <img src="7 (2).jpg" class="card_7" alt="LIFESTYLE_foto">
+    <span class="card-categori">
+        TRAVEL
+    </span>
+    <h2 class="card-title"> Cold winter days </h2>
+
+    <p  class="card-text">Lorem ipsum dolor sit, amet consectetur 
+        adipisicing elit. Fuga maiores architecto, cum quidem error
+         vero itaque dolore, facilis rem reprehenderit assumenda
+          aspernatur optio doloremque quis sequi animi veniam alias dolorem.</p>
+
+</section>
+</div>
 <!--Кнопка завантаження-->
     <button class="main_button">
         load more
