--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Ubuntu:wght@300&display=swap" 
     rel="stylesheet"/>
 <link rel="stylesheet" href="style.css">
@@ -21,11 +22,11 @@
                     <li><a href="PHOTODIARY">PHOTODIARY</a></li>
                     <li><a href=" MUSIC">MUSIC</a></li>
                     <li><a href="TRAVEL">TRAVEL</a></li>
+                </ul>   
             </nav>
-        </ul> 
         </header>
         <!--Основна частина сайту-->
-        <main class="main"></main>  
+        <main class="main"> 
         <!--Контейнер для карток-->  
         <div class="card-container">
             <section class="card">
@@ -41,7 +42,6 @@
                       aspernatur optio doloremque quis sequi animi veniam alias dolorem.</p>
 
             </section>
-        </div>
  <section class="card">
                 <img src="2.png" class="card_2" alt="LIFESTYLE_foto">
                 <span class="card-categori">
@@ -55,7 +55,6 @@
                       aspernatur optio doloremque quis sequi animi veniam alias dolorem.</p>
                       
             </section>
-        </div>
         <section class="card">
             <img src="3.png" class="card_3" alt="PHOTODIARY_foto">
             <span class="card-categori">
@@ -68,9 +67,7 @@
                  vero itaque dolore, facilis rem reprehenderit assumenda
                   aspernatur optio doloremque quis sequi animi veniam alias dolorem.</p>
                   
-        </section>
-    </div>
-
+            </section>
     <section class="card">
         <img src="4.png" class="card_4" alt="PHOTODIARY_foto">
         <span class="card-categori">
@@ -82,9 +79,8 @@
             adipisicing elit. Fuga maiores architecto, cum quidem error
              vero itaque dolore, facilis rem reprehenderit assumenda
               aspernatur optio doloremque quis sequi animi veniam alias dolorem.</p>
-
     </section>
-</div>
+
 <section class="card">
     <img src="5.png" class="card_5" alt="LIFESTYLE_foto">
     <span class="card-categori">
@@ -98,7 +94,6 @@
           aspernatur optio doloremque quis sequi animi veniam alias dolorem.</p>
 
 </section>
-</div>
 <section class="card">
     <img src="6.png" class="card_6" alt="LIFESTYLE_foto">
     <span class="card-categori">
@@ -112,9 +107,8 @@
           aspernatur optio doloremque quis sequi animi veniam alias dolorem.</p>
 
 </section>
-</div>
 <section class="card">
-    <img src="7 (2).jpg" class="card_7" alt="LIFESTYLE_foto">
+    <img src="7.jpg" class="card" alt="LIFESTYLE_foto">
     <span class="card-categori">
         TRAVEL
     </span>
@@ -124,13 +118,13 @@
         adipisicing elit. Fuga maiores architecto, cum quidem error
          vero itaque dolore, facilis rem reprehenderit assumenda
           aspernatur optio doloremque quis sequi animi veniam alias dolorem.</p>
-
 </section>
-</div>
+        </div>
 <!--Кнопка завантаження-->
     <button class="main_button">
         load more
     </button>
+    </main> 
     </div> 
 </body>
 </html>
